# GeminiVsDeepseek

./: .cursorrules  .dockerignore  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/models/: chat.py
backend/app/services/: chat_service.py
backend/src/app/: main.py
backend/src/app/models/: chat.py
backend/src/app/services/: chat_service.py
frontend/: Dockerfile  README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ModelComparison.tsx
