[project]
name = "langgraph-app-backend"
version = "0.1.0"
description = "LangGraph application with Gemini and FireworksAI"
authors = [
    { name = "Leo Walker" }
]
dependencies = [
    "pydantic",
    "typing-extensions",
    "ipykernel",
    "logfire>=3.5.3",
    "uvicorn>=0.34.0",
    "gunicorn>=23.0.0",
    "litellm>=1.60.6",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Explicitly include the folder that contains your code
packages = [
    { include = "app", from = "." }
]

# Add development dependencies section
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]
